<resources>
    <string name="app_name">Hilol Test Clone</string>
    <string name="title_home">Bosh sahifa</string>
    <string name="title_books">Kitoblar</string>
    <string name="title_settings">Sozlamalar</string>
    <string name="k01">Bahtiyor oila</string>
    <string name="k02">Mo\'minning qalqoni</string>
    <string name="k03">Mo\'minning umr safari</string>
    <string name="k04">Qarz</string>
    <string name="k05">Yolg\'on</string>
    <string name="k06">Hadis va Hayot</string>
    <string name="book">Book</string>
    <string name="soon">Tez kunda:</string>
    <string name="recommended">Tavsifa etamiz</string>
    <string name="search">Qidirish</string>
    <string name="shayx_muhammad_sodiq_muhammad_yusuf">Shayx Muhammad Sodiq Muhammad Yusuf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_answer_is_incorrect">Javobingiz xato!</string>
    <string name="chance">Imkon: %1$d</string>
    <string name="your_answer_is_correct">Javobingiz to\'g\'ri!</string>
    <string name="showing_incorrect_answer">To\'g\'ri javob: \n\"%1$s\"</string>
    <string name="showing_correct_answer">Tanlangan variant: \"%1$s\"</string>
    <string name="final_dialog">Siz %1$d ta savolga to\'g\'ri javob berdingiz</string>
    <string name="share">Ulashish</string>
    <string name="contribution">Dasturga hissa qo\'shish</string>
    <string name="apps">Bizning dasturlar</string>
    <string name="choose_language">Tilni tanlang</string>
    <string name="dark_mode">Tungi fon</string>
    <string name="uzbek_latin">O\'zbek (Lotin)</string>
    <string name="uzbek_kiril">Ўзбек (Лотин)</string>
    <string name="search_view_no_result_text">Hech qanday natija topilmadi, Boshqa so\'zni kiriting</string>
    <string name="coming_soon">Tez kunda</string>
    <string name="star">star</string>
    <string name="bestScore">Eng yaxshi: 0</string>
    <string name="bestResult">Eng yaxshi: %1$d</string>
</resources>