<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/coverOfBook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/book"
            android:scaleType="fitXY"
            android:src="@drawable/k01" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/k01"
            android:textColor="@color/md_theme_onPrimaryContainer"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book_author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/shayx_muhammad_sodiq_muhammad_yusuf"
            android:textColor="@color/md_theme_outline" />


        <TextView
            android:id="@+id/numberOfQuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/md_theme_outline"
            android:textSize="12sp"
            tools:text="Test: 0/59" />

    </LinearLayout>


</LinearLayout>
