<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uz.mbr.quiz.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_testFragment"
            app:destination="@id/testFragment" />
        <action
            android:id="@+id/action_navigation_home_to_recommendedBooksFragment"
            app:destination="@id/recommendedBooksFragment" />
        <argument
            android:name="score"
            app:argType="integer"
            android:defaultValue="0"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_books"
        android:name="uz.mbr.quiz.ui.books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books">
        <action
            android:id="@+id/action_navigation_books_to_testFragment"
            app:destination="@id/testFragment"
            app:popUpTo="@id/testFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="uz.mbr.quiz.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/testFragment"
        android:name="uz.mbr.quiz.ui.test.TestFragment"
        android:label="fragment_test"
        tools:layout="@layout/fragment_test">
        <action
            android:id="@+id/action_testFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/recommendedBooksFragment"
        android:name="uz.mbr.quiz.ui.recommended.RecommendedBooksFragment"
        android:label="fragment_recommended_books"
        tools:layout="@layout/fragment_recommended_books">
        <action
            android:id="@+id/action_recommendedBooksFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_recommendedBooksFragment_to_testFragment"
            app:destination="@id/testFragment"
            app:popUpTo="@id/testFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>