<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/rubik_extra_bold"
        android:gravity="center_vertical"
        android:text="@string/title_home"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="75dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardElevation="4dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/rubik_bold"
                        android:text="Tezkor test"
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="O'zingizni sinab ko'ring! Hamma kitoblardan umumiy test."
                        android:textColor="@color/md_theme_onPrimaryContainer" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="24dp"
                            android:text="@string/_0"
                            android:textAlignment="viewStart"
                            android:textColor="@color/md_theme_primary"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/btn_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_regular"
                            android:text="Boshlash"
                            android:textColor="@color/md_theme_onTertiary" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/recommended"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_forward"
                app:drawableTint="@color/md_theme_primary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="8"
                tools:listitem="@layout/item_home" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/soon"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="8"
                tools:listitem="@layout/item_home" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>